--- a/src/app/checkout/checkout-thx/checkout-thx.component.html
+++ b/src/app/checkout/checkout-thx/checkout-thx.component.html
@@ -1,3 +1,23 @@
-<p>
-  checkout-thx works!
-</p>
+<div class="container">
+
+  <h1>Vielen Dank für Ihre Bestellung! </h1>
+  <p>Ihre Bestellnummer ist: {{shopOrderId}}</p>
+
+
+
+
+  <br>
+
+  <div class="row">
+    <div class="offset-8">
+      <button type="button" class="btn btn-primary" (click)="onBackToShopping()">zum Shop</button>
+    </div>
+  </div>
+
+
+
+
+
+
+
+</div>
