--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -1,3 +1,22 @@
-<p>
-  checkout works!
-</p>
+<!-- <app-page-title title="Bestellung" [children]="[{title: 'Bestellung'}]"></app-page-title>-->
+<div class="container">
+  <br>
+
+  <div class="row">
+    <div class="col-md-12">
+      <div class="pointer" [ngClass]="{'active': step.id == currCheckoutStep}" *ngFor="let step of checkoutSteps"><span>{{step.description}}</span></div>
+    </div>
+  </div>
+
+  <br>
+  <div class="row">
+    <div class="col-md-10 offset-1">
+      <router-outlet></router-outlet>
+    </div>
+  </div>
+
+  <div class="checkout-steps">
+
+  </div>
+</div>
+
