--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,168 @@
-<footer>
-  <p>Footer here</p>
+<!-- Footer -->
+<footer class="page-footer font-small stylish-color-dark pt-4">
+
+  <!-- Footer Links -->
+  <div class="container text-center text-md-left">
+
+    <!-- Grid row -->
+    <div class="row">
+
+      <!-- Grid column -->
+      <div class="col-md-4 mx-auto">
+
+        <!-- Content -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Kontakt</h5>
+        <p>+41 0794795169</p>
+        <p><a href="mailto:mabrweb@gmail.com">mabrweb@gmail.com</a></p>
+<!--
+        <a href="#">
+          <fa name="facebook mr-1" size="2x"></fa>
+        </a>
+
+        <a href="#">
+          <fa name="twitter mr-1" size="2x"></fa>
+        </a>
+
+        <a href="#">
+          <fa name="instagram mr-1" size="2x"></fa>
+        </a>
+
+        <a href="#">
+          <fa name="google mr-1" size="2x"></fa>
+        </a> -->
+
+
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-2 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mobile Apps</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#">Appstore Icon</a>
+          </li>
+          <li>
+            <a href="#">Google Icon</a>
+          </li>
+        </ul>
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-2 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Über uns</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#">Unsere Firma</a>
+          </li>
+          <li>
+            <a href="#">Geschichte</a>
+          </li>
+          <li>
+            <a href="#">Dienstleistungen</a>
+          </li>
+          <li>
+            <a href="#">Link 4</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+      <hr class="clearfix w-100 d-md-none">
+
+      <!-- Grid column -->
+      <div class="col-md-2 mx-auto">
+
+        <!-- Links -->
+        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Zahlart & Versandart</h5>
+
+        <ul class="list-unstyled">
+          <li>
+            <a href="#">Ihr Konto</a>
+          </li>
+          <li>
+            <a href="#">Verandarten / Kosten</a>
+          </li>
+          <li>
+            <a href="#">Rückerstattung</a>
+          </li>
+          <li>
+            <a href="#">Gebüren</a>
+          </li>
+        </ul>
+
+      </div>
+      <!-- Grid column -->
+
+    </div>
+    <!-- Grid row -->
+
+  </div>
+  <!-- Footer Links -->
+
+  <hr>
+
+  <!-- Call to action -->
+  <ul class="list-unstyled list-inline text-center py-2">
+    <!--<li class="list-inline-item">-->
+    <!--<h5 class="mb-1">Register for free</h5>-->
+    <!--</li>-->
+    <li class="list-inline-item">
+      <a [routerLink]="['user-login-register-slide']">Login / Registrierung</a>
+    </li>
+  </ul>
+  <!-- Call to action -->
+
+  <hr>
+
+  <!-- Social buttons -->
+  <!--<ul class="list-unstyled list-inline text-center">-->
+  <!--<li class="list-inline-item">-->
+  <!--<a class="btn-floating btn-fb mx-1" mdbWavesEffect>-->
+  <!--<p>Facebook</p>-->
+  <!--</a>-->
+  <!--</li>-->
+  <!--<li class="list-inline-item">-->
+  <!--<a class="btn-floating btn-tw mx-1" mdbWavesEffect>-->
+  <!--<p>Twitter</p>-->
+  <!--</a>-->
+  <!--</li>-->
+  <!--<li class="list-inline-item">-->
+  <!--<a class="btn-floating btn-gplus mx-1" mdbWavesEffect>-->
+  <!--<p>Google Plus</p>-->
+  <!--</a>-->
+  <!--</li>-->
+  <!--<li class="list-inline-item">-->
+  <!--<a class="btn-floating btn-li mx-1" mdbWavesEffect>-->
+  <!--<p>Linkedin</p>-->
+  <!--</a>-->
+  <!--</li>-->
+  <!--<li class="list-inline-item">-->
+  <!--<a class="btn-floating btn-dribbble mx-1" mdbWavesEffect>-->
+  <!--<p>XXX</p>-->
+  <!--</a>-->
+  <!--</li>-->
+  <!--</ul>-->
+  <!-- Social buttons -->
+
+  <!-- Copyright -->
+  <div class="footer-copyright text-center py-3">© All rights reserved. Made with Herz by Martin Polak & Bruno Staub
+    <a href="#"> mabrweb.com</a>
+  </div>
+  <!-- Copyright -->
+
 </footer>
+<!-- Footer -->
