--- a/src/app/core/header/header.component.html
+++ b/src/app/core/header/header.component.html
@@ -1,5 +1,10 @@
 <nav class="navbar navbar-expand-md navbar-dark bg-dark">
 
+
+ <a class="navbar-brand" [routerLink]="['']">mabr</a>
+
+  <app-header-orderflyout></app-header-orderflyout>
+
   <div class="collapse navbar-collapse" id="navbarsExampleDefault">
 
     <ul class="navbar-nav">
