--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -53,7 +53,7 @@
             <td align="rigth">
 
               <button class="btn btn-sm btn-danger" (click)="onDeletItem(product.productId)">
-                <!-- <fa name="trash"></fa> -->
+                <fa name="trash"></fa>
               </button>
             </td>
           </tr>
