user login/register, gurards, home slider, off-canvas

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
+
+// Colors
+$c-bg-header: #72A1A7;
+$c-bg-footer: #72A1A7;
+$c-font-header: rgba(226, 220, 220, 0.5);
+$c-font-header: rgba(226, 220, 220, 0.5);
+
+
