--- a/src/app/core/header/header.component.scss
+++ b/src/app/core/header/header.component.scss
@@ -1,66 +1,38 @@
-ul {
-  margin-bottom: 0;
-}
-
-li.submenu {
-  padding: 10px;
-}
-
-.shopping li {
-  list-style-type: none;
-}
-
-@media (max-width: 580px) {
-  .shopping ul {
-    padding-left: 0;
+.burgerMenu {
+  // margin-right: 35px;
+  cursor: pointer;
+  display: block;
+  div {
+    width: 35px;
+    height: 5px;
+    background-color: white;
+    margin: 6px 0;
   }
 }
 
-.submenu {
-  position: relative;
+li.nav-item.lang {
+  display: flex;
 }
 
-.submenu #shopping-cart {
-  display: none;
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) {
+
 }
 
-.submenu:hover #shopping-cart {
-  display: block;
-  position: absolute;
-  right: -15px;
-  top: 45px;
-  z-index: 3;
-  background-color: white;
-  padding: 20px;
-  min-height: 200px;
-  min-width: 373px;
-  border: 1px solid black;
-}
-
-.remove {
-  background-color: red;
-  border-radius: 50%;
-  padding: 5px 10px;
-  text-decoration: none;
-  color: white;
-  font-weight: bold;
-}
-
-.bubble {
-  display: inline-block;
-  padding: 4px 7px 4px 7px;
-  font-size: 12px;
-  font-weight: bold;
-  line-height: 1;
-  background: white;
-  border-radius: 10px;
-}
-
-@media only screen and (max-width: 425px) {
-
-  .shopping .submenu div#shopping-cart {
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  .burgerMenu {
     display: none;
   }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
 
 }
 
