--- a/src/app/core/home/home.component.html
+++ b/src/app/core/home/home.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid">
   <!--<app-page-title title="Homepage" [children]="[{title: 'Homepage'}]" [homepage]="true"></app-page-title>-->
-  <!--<app-home-slider-ngcarousel></app-home-slider-ngcarousel>-->
+  <app-home-slider-ngcarousel></app-home-slider-ngcarousel>
 
   <div class="container mt-5">
     <div class="card-deck mb-3 text-center">
