--- a/src/app/core/home/off-canvas/off-canvas.component.scss
+++ b/src/app/core/home/off-canvas/off-canvas.component.scss
@@ -6,7 +6,7 @@
   // z-index: 1; /* Stay on top */
   z-index: 1040;  //bootstrap header has 1030!
   top: -80px; //because Navbar is 80px height
-  left: 0;
+  right: 0;
   background-color: #111;
   overflow-x: hidden; /* Disable horizontal scroll, also hide Text when close Nav */
   padding-top: 60px;
