--- a/src/app/core/header/header-search/header-search.component.scss
+++ b/src/app/core/header/header-search/header-search.component.scss
@@ -1,22 +1,15 @@
 input[type=text] {
   position: absolute;
-  // top: 17px;
-  // right: 93px;
+  top: 18px;
+  right: 100px;
   border: 0;
 
-  // zoom lupe start
-  top:10px;
-  right: 66px;
-  zoom: 1.3;
-  // zoom lupe end
 
-
-  background-color: #343A40;
   background-image: url('./../../../../assets/searchicon.png');
-  width: 30px;
+  width: 40px;
+  height: 30px;
+  // background-color: #343A40;
   // background-size: 30px;
-  // width: 35px;
-  // height: 30px;
 
 
   background-position: 4px 4px;
@@ -24,8 +17,7 @@ input[type=text] {
   box-sizing: border-box;
   cursor: pointer;
   text-indent:-5000px;
-
-  transition: all 0.4s ease-in-out;
+  // transition: all 0.4s ease-in-out;
 }
 
 
@@ -39,12 +31,11 @@ input[type=text]:focus {
   background-image: url('./../../../../assets/searchicon.png');
   background-position: 10px 20px;
   background-repeat: no-repeat;
-  // padding: 15px 20px 15px 40px;
   padding: 20px 20px 20px 40px;
   text-indent: 0;
   cursor: text;
-  zoom: 1;
   z-index: 4;
+  height: auto;
 
 }
 
@@ -83,7 +74,6 @@ input[type=text]:focus {
 
 @media (max-width: 767px) {
   input[type=text] {  // search icon left to the hamburger
-    right: 45px!important;
+    right: 68px!important;
   }
-
 }
