--- a/src/app/core/home/home-slider-ngcarousel/home-slider-ngcarousel.component.html
+++ b/src/app/core/home/home-slider-ngcarousel/home-slider-ngcarousel.component.html
@@ -1,7 +1,7 @@
 <ngb-carousel *ngIf="sliderdata">
   <ng-template *ngFor="let slide of sliderdata" ngbSlide>
     <a href="{{slide.link}}">
-      <img src="{{slide.image}}" alt="Random first slide">
+      <img src="{{slide.image}}" width="2560" height="500" alt="Random first slide">
       <div class="carousel-caption">
         <h2>{{slide.title}}</h2>
         <p>{{slide.text}}</p>
