banner full size

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,6 +1,14 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~bootstrap/dist/css/bootstrap.css";
 
+
+app-home {
+  .container-fluid {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
+
 // Colors
 $c-bg-header: #72A1A7;
 $c-bg-footer: #72A1A7;
