--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,168 +1,117 @@
-<!-- Footer -->
-<footer class="page-footer font-small stylish-color-dark pt-4">
-
-  <!-- Footer Links -->
-  <div class="container text-center text-md-left">
-
-    <!-- Grid row -->
+<footer class="main-footer">
+  <div class="container">
     <div class="row">
-
-      <!-- Grid column -->
-      <div class="col-md-4 mx-auto">
-
-        <!-- Content -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Kontakt</h5>
-        <p>+41 0794795169</p>
-        <p><a href="mailto:mabrweb@gmail.com">mabrweb@gmail.com</a></p>
-
-        <a href="#">
-          <fa name="facebook mr-1" size="2x"></fa>
-        </a>
-
-        <a href="#">
-          <fa name="twitter mr-1" size="2x"></fa>
-        </a>
-
-        <a href="#">
-          <fa name="instagram mr-1" size="2x"></fa>
-        </a>
-
-        <a href="#">
-          <fa name="google mr-1" size="2x"></fa>
-        </a>
-
-
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Mobile Apps</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#">Appstore Icon</a>
+      <div class="footer-sitemap-section col-4 col-lg-3">
+        <h4 class="sitemap-title">CATEGORIES</h4>
+        <ul class="sitemap-items-list list-unstyled">
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'men']">
+              Men
+            </a>
           </li>
-          <li>
-            <a href="#">Google Icon</a>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'women']">
+              Women
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'kids']" >
+              Kids
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'outdoors']">
+              Outdoors
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['/products/category', 'running']">
+              Running
+            </a>
           </li>
         </ul>
       </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Über uns</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#">Unsere Firma</a>
+      <div class="footer-sitemap-section col-4 col-lg-3">
+        <h4 class="sitemap-title">INFO</h4>
+        <ul class="sitemap-items-list list-unstyled">
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1" [routerLink]="['/about']">
+              About Us
+            </a>
           </li>
-          <li>
-            <a href="#">Geschichte</a>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Careers
+            </a>
           </li>
-          <li>
-            <a href="#">Dienstleistungen</a>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Press
+            </a>
           </li>
-          <li>
-            <a href="#">Link 4</a>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Sustainability
+            </a>
           </li>
-        </ul>
-
-      </div>
-      <!-- Grid column -->
-
-      <hr class="clearfix w-100 d-md-none">
-
-      <!-- Grid column -->
-      <div class="col-md-2 mx-auto">
-
-        <!-- Links -->
-        <h5 class="font-weight-bold text-uppercase mt-3 mb-4">Zahlart & Versandart</h5>
-
-        <ul class="list-unstyled">
-          <li>
-            <a href="#">Ihr Konto</a>
-          </li>
-          <li>
-            <a href="#">Verandarten / Kosten</a>
-          </li>
-          <li>
-            <a href="#">Rückerstattung</a>
-          </li>
-          <li>
-            <a href="#">Gebüren</a>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Affiliates
+            </a>
           </li>
         </ul>
-
       </div>
-      <!-- Grid column -->
-
+      <div class="footer-sitemap-section col-4 col-lg-3">
+        <h4 class="sitemap-title">HELP</h4>
+        <ul class="sitemap-items-list list-unstyled">
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Order Status
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Shipping and Delivery
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Returns
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Payment Options
+            </a>
+          </li>
+          <li class="sitemap-item">
+            <a class="sitemap-link" tabindex="-1">
+              Contact Us
+            </a>
+          </li>
+        </ul>
+      </div>
+      <div class="footer-social-presence col-12 col-lg-3 order-first order-lg-last">
+        <a class="social-link" href="https://instagram.com" target="_blank" tabindex="-1">
+          <span class="fa fa-instagram"></span>
+        </a>
+        <a class="social-link" href="https://youtube.com" target="_blank" tabindex="-1">
+          <span class="fa fa-youtube-play"></span>
+        </a>
+        <a class="social-link" href="https://twitter.com" target="_blank" tabindex="-1">
+          <span class="fa fa-twitter"></span>
+        </a>
+        <a class="social-link" href="https://facebook.com" target="_blank" tabindex="-1">
+          <span class="fa fa-facebook"></span>
+        </a>
+      </div>
     </div>
-    <!-- Grid row -->
-
   </div>
-  <!-- Footer Links -->
-
-  <hr>
-
-  <!-- Call to action -->
-  <ul class="list-unstyled list-inline text-center py-2">
-    <!--<li class="list-inline-item">-->
-    <!--<h5 class="mb-1">Register for free</h5>-->
-    <!--</li>-->
-    <li class="list-inline-item">
-      <a [routerLink]="['user-login-register-slide']">Login / Registrierung</a>
-    </li>
-  </ul>
-  <!-- Call to action -->
-
-  <hr>
-
-  <!-- Social buttons -->
-  <!--<ul class="list-unstyled list-inline text-center">-->
-  <!--<li class="list-inline-item">-->
-  <!--<a class="btn-floating btn-fb mx-1" mdbWavesEffect>-->
-  <!--<p>Facebook</p>-->
-  <!--</a>-->
-  <!--</li>-->
-  <!--<li class="list-inline-item">-->
-  <!--<a class="btn-floating btn-tw mx-1" mdbWavesEffect>-->
-  <!--<p>Twitter</p>-->
-  <!--</a>-->
-  <!--</li>-->
-  <!--<li class="list-inline-item">-->
-  <!--<a class="btn-floating btn-gplus mx-1" mdbWavesEffect>-->
-  <!--<p>Google Plus</p>-->
-  <!--</a>-->
-  <!--</li>-->
-  <!--<li class="list-inline-item">-->
-  <!--<a class="btn-floating btn-li mx-1" mdbWavesEffect>-->
-  <!--<p>Linkedin</p>-->
-  <!--</a>-->
-  <!--</li>-->
-  <!--<li class="list-inline-item">-->
-  <!--<a class="btn-floating btn-dribbble mx-1" mdbWavesEffect>-->
-  <!--<p>XXX</p>-->
-  <!--</a>-->
-  <!--</li>-->
-  <!--</ul>-->
-  <!-- Social buttons -->
-
-  <!-- Copyright -->
-  <div class="footer-copyright text-center py-3">© All rights reserved. Made with Herz by Martin Polak & Bruno Staub
-    <a href="#"> mabrweb.com</a>
-  </div>
-  <!-- Copyright -->
-
 </footer>
-<!-- Footer -->
+
+
+
+
+
+
+
