--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,18 +1,18 @@
 /* You can add global styles to this file, and also import other style files */
-@import "~bootstrap/dist/css/bootstrap.css";
+
+// go in app/styles/main.scss
+// this files is not used!
+// scss entry point main.scss is defined in angular.json
 
 
-app-home {
-  > .container-fluid {
-    padding-left: 0;
-    padding-right: 0;
-  }
-}
+/*
+It's important to note that the _variables mixing file should not be changed directly
+as it can and will be overwritten during future updates or installs.
+Instead, each variable is marked with a Sass !default keyword.
+The !default keyword can be considered the opposite of !important.
+This allows us to override the setting easily in our own code external to the _variables file.
+*/
 
-// Colors
-$c-bg-header: #72A1A7;
-$c-bg-footer: #72A1A7;
-$c-font-header: rgba(226, 220, 220, 0.5);
-$c-font-header: rgba(226, 220, 220, 0.5);
+// 11.12.2018, BS
 
 
