--- a/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
+++ b/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
@@ -8,18 +8,20 @@
 
     <div formGroupName="customerBillingAddress">
 
-      <div class="form-group">
+      <div class="row">
+
+      <div class="form-group col-md-6 col-sm-12">
         <label for="firstname_b">Vorname</label>
         <input class="form-control" type="text" id="firstname_b" name="firstname_b" formControlName="firstname_b">
       </div>
 
 
-      <div class="form-group">
+        <div class="form-group col-md-6 col-sm-12">
         <label for="lastname_b">Nachname</label>
         <input class="form-control" type="text" id="lastname_b" name="lastname_b" formControlName="lastname_b">
       </div>
 
-
+      </div>
 
       <div class="form-group">
         <label for="address_b">Strasse</label>
@@ -28,19 +30,21 @@
 
 
 
-      <div class="form-group">
-        <label for="zip_b">PLZ</label>
-        <input class="form-control" type="text" id="zip_b" name="zip_b" formControlName="zip_b">
+
+      <div class="row">
+
+        <div class="form-group col-md-3 col-sm-12">
+          <label for="zip_b">PLZ</label>
+          <input class="form-control" type="text" id="zip_b" name="zip_b" formControlName="zip_b">
+        </div>
+
+
+        <div class="form-group col-md-9 col-sm-12">
+          <label for="city_b">Ort</label>
+          <input class="form-control" type="text" id="city_b" name="city_b" formControlName="city_b">
+        </div>
+
       </div>
-
-
-
-      <div class="form-group">
-        <label for="city_b">Ort</label>
-        <input class="form-control" type="text" id="city_b" name="city_b" formControlName="city_b">
-      </div>
-
-
 
       <div class="form-group">
         <label for="country_b">Land</label>
@@ -48,18 +52,19 @@
       </div>
 
 
+      <div class="row">
 
-      <div class="form-group">
-        <label for="phone_b">Telefon</label>
-        <input class="form-control" type="text" id="phone_b" name="phone_b" formControlName="phone_b">
-      </div>
+        <div class="form-group col-md-6 col-sm-12">
+          <label for="phone_b">Telefon</label>
+          <input class="form-control" type="text" id="phone_b" name="phone_b" formControlName="phone_b">
+        </div>
 
 
-      <div *ngIf="!user">
-        <div class="form-group">
+        <div *ngIf="!user" class="form-group col-md-6 col-sm-12">
           <label for="mail_b">E-Mail</label>
           <input class="form-control" type="text" id="mail_b" name="mail_b" formControlName="mail_b">
         </div>
+
       </div>
 
     </div>
