produkt detail feature styling 2

--- a/src/app/product/product-detail/product-detail.component.html
+++ b/src/app/product/product-detail/product-detail.component.html
@@ -1,47 +1,4 @@
-<!--<div class="app-detail-list">-->
 
-  <!--<h2>Detail Ansicht</h2>-->
-  <!--<div *ngIf="selectedProduct$ | async as product; else loading" class="row mb-3">-->
-    <!--<div class="col-12 col-sm-6">-->
-      <!--<div>-->
-        <!--<label>Name: </label>-->
-        <!--<p>{{product.name}}</p>-->
-      <!--</div>-->
-      <!--<div>-->
-        <!--<label>Beschreibung: </label>-->
-        <!--<p>{{product.description}}</p>-->
-
-      <!--</div>-->
-      <!--<div>-->
-        <!--<label>Preis: </label>-->
-        <!--<p *ngIf="product.discountFactor !== 1" style="text-decoration:line-through;">CHF {{product.price}}</p>-->
-        <!--<p>CHF {{product.price * product.discountFactor | number : '1.2-2'}}</p>-->
-      <!--</div>-->
-
-
-      <!--<br><input type="text" name="anzahl" style="width: 50px;height: 36px;border-radius: 5px;"-->
-                 <!--[(ngModel)]="product.itemcount">-->
-      <!--<button class="btn btn-outline-success mt-3 mb-3" style="display: inline-block;" (click)='addToBasket(product)'>in-->
-        <!--den Warenkorb-->
-      <!--</button>-->
-
-    <!--</div>-->
-    <!--<div class="col-12 col-sm-6">-->
-      <!--<img src="{{product.image || '//:0'}}" class="img-fluid" alt="Dummy Images">-->
-    <!--</div>-->
-
-
-    <!--<div class="col-12">-->
-      <!--<button class="btn btn-primary btn-detail" appBackButton>Zurück</button>-->
-    <!--</div>-->
-
-  <!--</div>-->
-
-  <!--<ng-template #loading>-->
-    <!--<div>Loading ...</div>-->
-  <!--</ng-template>-->
-
-<!--</div>-->
 
 
 <div *ngIf="selectedProduct$ | async as product; else loading">
@@ -97,8 +54,7 @@
               placeholder="1" type="number" value="1">
             </div>
             <div class="align-content-start w-50"><a
-              class="btn btn-primary btn-lg btn-block"
-              routerlink="/product-cart" href="/product-cart">in Warenkorb</a></div>
+              class="btn btn-primary btn-lg btn-block" (click)="addToBasket(product)">in Warenkorb</a></div>
           </div>
         </div>
       </div>
