--- a/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
+++ b/src/app/checkout/checkout-customerdata/checkout-customerdata.component.html
@@ -1,4 +1,4 @@
-<div class="container">
+
 
 
   <h1>Rechnungsadresse</h1>
@@ -10,16 +10,16 @@
 
       <div class="row">
 
-      <div class="form-group col-md-6 col-sm-12">
-        <label for="firstname_b">Vorname</label>
-        <input class="form-control" type="text" id="firstname_b" name="firstname_b" formControlName="firstname_b">
-      </div>
+        <div class="form-group col-md-6 col-sm-12">
+          <label for="firstname_b">Vorname</label>
+          <input class="form-control" type="text" id="firstname_b" name="firstname_b" formControlName="firstname_b">
+        </div>
 
 
         <div class="form-group col-md-6 col-sm-12">
-        <label for="lastname_b">Nachname</label>
-        <input class="form-control" type="text" id="lastname_b" name="lastname_b" formControlName="lastname_b">
-      </div>
+          <label for="lastname_b">Nachname</label>
+          <input class="form-control" type="text" id="lastname_b" name="lastname_b" formControlName="lastname_b">
+        </div>
 
       </div>
 
@@ -27,8 +27,6 @@
         <label for="address_b">Strasse</label>
         <input class="form-control" type="text" id="address_b" name="address_b" formControlName="address_b">
       </div>
-
-
 
 
       <div class="row">
@@ -39,19 +37,19 @@
         </div>
 
 
-        <div class="form-group col-md-9 col-sm-12">
+        <div class="form-group col-md-5 col-sm-12">
           <label for="city_b">Ort</label>
           <input class="form-control" type="text" id="city_b" name="city_b" formControlName="city_b">
         </div>
 
-      </div>
 
-      <div class="form-group">
+
+      <div class="form-group col-md-4 col-sm-12">
         <label for="country_b">Land</label>
         <input class="form-control" type="text" id="country_b" name="country_b" formControlName="country_b">
       </div>
 
-
+      </div>
       <div class="row">
 
         <div class="form-group col-md-6 col-sm-12">
@@ -68,16 +66,17 @@
       </div>
 
     </div>
-    <br>
 
+    <br>
     <br>
     <div class="form-check">
-      <input type="checkbox" class="form-check-input" id="shipqingEqualsBillingAddress" [(ngModel)]="shipqingEqualsBillingAddress"  [ngModelOptions]="{standalone: true}" (change)="setValidation($event)">
-      <label class="form-check-label" for="shipqingEqualsBillingAddress">Lieferadresse gleich wie Rechnungsadresse</label>
+      <input type="checkbox"
+             class="form-check-input"
+             id="shipqingEqualsBillingAddress" [(ngModel)]="shipqingEqualsBillingAddress" [ngModelOptions]="{standalone: true}" (change)="setValidation($event)">
+      <label class="form-check-label" for="shipqingEqualsBillingAddress">Lieferadresse gleich wie
+        Rechnungsadresse</label>
     </div>
     <p></p>
-
-
 
 
     <div *ngIf="!shipqingEqualsBillingAddress" formGroupName="customerShippingAddress">
@@ -86,22 +85,18 @@
       <h1>Lieferadresse</h1>
 
 
+      <div class="row">
+        <div class="form-group col-md-6 col-sm-12">
+          <label for="firstname_s">Vorname</label>
+          <input class="form-control" type="text" id="firstname_s" name="firstname_s" formControlName="firstname_s">
+        </div>
 
 
-      <div class="form-group">
-        <label for="firstname_s">Vorname</label>
-        <input class="form-control" type="text" id="firstname_s" name="firstname_s" formControlName="firstname_s">
+        <div class="form-group col-md-6 col-sm-12">
+          <label for="lastname_s">Nachname</label>
+          <input class="form-control" type="text" id="lastname_s" name="lastname_s" formControlName="lastname_s">
+        </div>
       </div>
-
-
-
-
-
-      <div class="form-group">
-        <label for="lastname_s">Nachname</label>
-        <input class="form-control" type="text" id="lastname_s" name="lastname_s" formControlName="lastname_s">
-      </div>
-
 
 
       <div class="form-group">
@@ -110,50 +105,53 @@
       </div>
 
 
-
-      <div class="form-group">
-        <label for="zip_s">PLZ</label>
-        <input class="form-control" type="text" id="zip_s" name="zip_s" formControlName="zip_s">
-      </div>
-
-
-
-      <div class="form-group">
-        <label for="city_s">Ort</label>
-        <input class="form-control" type="text" id="city_s" name="city_s" formControlName="city_s">
-      </div>
+      <div class="row">
+        <div class="form-group col-md-3 col-sm-12">
+          <label for="zip_s">PLZ</label>
+          <input class="form-control" type="text" id="zip_s" name="zip_s" formControlName="zip_s">
+        </div>
 
 
+        <div class="form-group col-md-5 col-sm-12">
+          <label for="city_s">Ort</label>
+          <input class="form-control" type="text" id="city_s" name="city_s" formControlName="city_s">
+        </div>
 
-      <div class="form-group">
+
+
+        <div class="form-group col-md-4 col-sm-12">
         <label for="country_s">Land</label>
         <input class="form-control" type="text" id="country_s" name="country_s" formControlName="country_s">
       </div>
 
-
-
-      <div class="form-group">
-        <label for="phone_s">Telefon</label>
-        <input class="form-control" type="text" id="phone_s" name="phone_s" formControlName="phone_s">
       </div>
 
+        <div class="row">
 
-      <div>
-        <div class="form-group">
-          <label for="mail_s">E-Mail</label>
-          <input class="form-control" type="text" id="mail_s" name="mail_s" formControlName="mail_s">
+          <div class="form-group col-md-6 col-sm-12">
+            <label for="phone_s">Telefon</label>
+            <input class="form-control" type="text" id="phone_s" name="phone_s" formControlName="phone_s">
+          </div>
+
+
+          <div class="form-group col-md-6 col-sm-12">
+            <label for="mail_s">E-Mail</label>
+            <input class="form-control" type="text" id="mail_s" name="mail_s" formControlName="mail_s">
+          </div>
         </div>
+
+
       </div>
 
+
+    <div class="row">
+      <div class="col-12">
+      <button type="button" class="btn btn-primary float-md-left" (click)="goBack()">zurück</button>
+      <button [disabled]="!formIsValid" type="submit" class="btn btn-primary float-md-right">weiter zur Versandart</button>
+      </div>
     </div>
-
-    <button  type="button" class="btn btn-primary pull-left" (click)="goBack()">zurück</button>
-    <button [disabled]="!formIsValid" type="submit" class="btn btn-primary pull-right">weiter zur Versandart</button>
-
-
-
 
   </form>
 
 
-</div>
+
