--- a/src/app/styles/_variables.scss
+++ b/src/app/styles/_variables.scss
@@ -22,3 +22,11 @@ $preload-image-bg: rgba(darken($white, 10), .25);
 // Preload Image / Background Image
 $spinner-size: 28px;
 $spinner-color: $grey;
+
+
+//Theme Colors https://color.adobe.com/de/webshop-color-theme-11628321/edit/?copy=true
+$theme-color1: #A3D9E9;
+$theme-color2: #70A1A8;
+$theme-color3: #DFBA49;
+$theme-color4: #FD933A;
+$theme-color5: #FC6C48;
