Button Styles Samstag Session

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <app-header (offCanvasClicked)="OffCanvasClicked()"></app-header>
 <app-off-canvas (closeNavState)="CloseNavState()" [changeCanvasState]="OffCanvasClickedCheck"></app-off-canvas>
-<div class="main">
+<div class="main" id="main">
   <router-outlet></router-outlet>
 </div>
 <app-footer></app-footer>
