--- a/src/app/product/product-detail/product-detail.component.scss
+++ b/src/app/product/product-detail/product-detail.component.scss
@@ -1,1 +1,8 @@
+@import '../../styles/_shared';
+
+//.btn-mabr-primary {
+//  background-color: $mabr-btn-bg-color;
+//  border-radius: $mabr-btn-border-radius;
+//}
+
 
