--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,4 +1,4 @@
-<!--<app-page-title title="Bestellung" [children]="[{title: 'Bestellung'}]"></app-page-title>-->
+<app-page-title title="Bestellung" [children]="[{title: 'Bestellung'}]"></app-page-title>
 <div class="container">
 
 
