--- a/src/app/styles/_shared.scss
+++ b/src/app/styles/_shared.scss
@@ -4,3 +4,6 @@
 @import '~bootstrap/scss/mixins';
 @import 'variables';
 @import 'mixins';
+@import 'buttons';
+@import 'custom_mabr';
+@import "custom_reset";
