--- a/src/app/shared/page-title/page-title.component.html
+++ b/src/app/shared/page-title/page-title.component.html
@@ -18,7 +18,7 @@
     <div class="column">
       <ul class="breadcrumbs">
         <li>
-          <a routerLink="/home" href="">Home</a>
+          <a routerLink="" href="">Home</a>
         </li>
 
         <ng-container *ngIf="!filteredProducts">
