--- a/src/app/core/footer/styles/footer.styles.scss
+++ b/src/app/core/footer/styles/footer.styles.scss
@@ -4,8 +4,9 @@ app-footer {
   display: block;
 
   .main-footer {
+    margin-top: 50px;
     background-color: $black;
-    padding: 50px 0px;
+    padding: 50px 0;
 
     .footer-sitemap-section {
       @include media-breakpoint-down(xs) {
@@ -21,14 +22,14 @@ app-footer {
       }
 
       .sitemap-items-list {
-        margin: 0px;
+        margin: 0;
 
         .sitemap-item {
-          padding: 0.2rem 0px;
+          padding: 0.2rem 0;
           font-size: 1rem;
 
           @include media-breakpoint-down(xs) {
-            padding: 0.4rem 0px;
+            padding: 0.4rem 0;
             font-size: 0.9rem;
           }
 
