--- a/src/app/product/product.component.html
+++ b/src/app/product/product.component.html
@@ -1,22 +1,15 @@
-<style>
-  nav{
-    margin-left: 10px;
-    margin-bottom: 20px;
-  }
-  a{
-    display: inline-block;
-    margin-left: 5px;
 
-  }
-  .btn-primary{
-    background: dimgrey!important;
-  }
-</style>
 <app-page-title title="Produkte" [children]="[{title: 'Produkte'}]"></app-page-title>
-<nav>
-  <a routerLink="grid" class="btn btn-primary active" role="button" routerLinkActive="active"><i class="fa fa-th" aria-hidden="true"></i></a>
-  <a routerLink="list" class="btn btn-primary active" role="button" routerLinkActive="active"><i class="fa fa-list" aria-hidden="true"></i></a>
-  <a class="btn btn-primary active" role="button" (click)="getBasket()"><i class="fa fa-shopping-basket" aria-hidden="true"></i></a>
-</nav>
+<div class="container-fluid">
+  <div class="row">
+    <nav class="product-navi">
+      <button routerLink="grid" class="btn btn-primary" role="button" routerLinkActive="active"><i class="fa fa-th" aria-hidden="true"></i></button>
+      <button routerLink="list" class="btn btn-primary" role="button" routerLinkActive="active"><i class="fa fa-list" aria-hidden="true"></i></button>
+      <button class="btn btn-primary" role="button" (click)="getBasket()"><i class="fa fa-shopping-basket" aria-hidden="true"></i></button>
+    </nav>
+  </div>
+
+</div>
+
 
 <router-outlet></router-outlet>
